tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_inheritance_errors@include_error_in_extended_parent.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/inheritance/include_error_in_extended_parent.txt
---
error: Cannot divide by 0
 --> partial:1:8
  |
1 | {{ 1 / 0 }}
  |        ^

note: called from base:3:12
  |
3 | {% include "partial" %}
  |            ^^^^^^^^^
